--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <link rel="shortcut icon" href="">
     </head>
   <body>
-  
+
     <!-- Place your content here -->
     <canvas id="canvas"></canvas>
-  
+
     <!-- SCRIPTS -->
     <script src="https://wgld.org/j/minMatrix.js"></script>
     <script>var webglmetasequoia = {}</script>
-    <script src="scripts/sgl.js"></script>
-    <script src="scripts/metasequoia.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="app/scripts/sgl.js"></script>
+    <script src="app/scripts/metasequoia.js"></script>
+    <script src="app/scripts/main.js"></script>
   </body>
 </html>
